--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-  "name": "pixel-plurimedia/pxl-pluri-seach-pse-module",
+  "name": "pixel-plurimedia/pxl-pluri-search-pse-module",
   "license": "LGPL-3.0-or-later",
   "type": "thelia-module",
   "require": {
     "thelia/installer": "~1.1"
   },
   "extra": {
-    "installer-name": "PxlPluriSeachPSE"
+    "installer-name": "PxlPluriSearchPSE"
   }
 }
